# franka_passive_DS_impedance_controller

./: CMakeLists.txt  LICENSE  README.md  franka_passive_ds_impedance_controller_plugin.xml  package.xml
cfg/: passive_ds_param.cfg
config/: passive_DS_impedance_controller.yaml
include/: passive_DS_impedance_controller.h  pseudo_inversion.h
launch/: passive_DS_impedance_controller.launch
robot_demos/contact/: contact_20260330_164310.csv  contact_execution_tracking_1_250_50_50.csv  contact_execution_tracking_20260330_164528.csv  contact_execution_tracking_20260330_165416.csv  contact_execution_tracking_2_250_50_50.csv
robot_demos/disturbance/: disturbance_execution_tracking_1_150_150_150.csv  disturbance_execution_tracking_20260330_231449.csv  disturbance_execution_tracking_250_50_50.csv  disturbance_execution_tracking_2_150_150_150.csv
robot_demos/free_space/: free_space.csv  free_space_execution_tracking_20260330_163648.csv  free_space_execution_tracking_250_50_50.csv
scripts/: command_robot.py  interactive_marker.py  plot_results.py  record_demos.py
src/: passive_DS_impedance_controller.cpp
